# barkdocs

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  test.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  config.rs  github.rs  input.rs  main.rs  markdown.rs  storage.rs  theme.rs  ui.rs
